--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "lib/",
-    "target": "es2015"
+    "target": "es5",
+    "lib": [ "es2015", "dom"]
   },
   "include": [
     "src/**/*"
